Works with new Quantifier code

--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   "homepage": "https://github.com/stevenvelozo/imogen#readme",
   "dependencies": {
     "get-pixels": "^3.2.3",
-    "quantifier": "^1.0.0"
+    "quantifier": "~1.0.0"
   }
 }
